Revert "Correzione delle issue"
This reverts commit 496b6f342bbd0e93dfe1552d237ef26466defda0.